# financial-reports-crawler

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
envs/: .env.sample
requirements/: requirements_deployment.txt  requirements_dev.txt
src/consumer/: consumer.py  denmark.py
src/database/: client.py
src/database/entity/: __init__.py  base_model.py  denmark_report.py  google_oauth_scopes.py
src/database/repository/: __init__.py  denmark_report.py  google_oauth_scopes.py
src/google_api/: denmark_data_storage.py  drive_api.py  oauth.py
src/models/: cvr_search.py  denmark_api.py  google_drive_api.py  queue_data.py
src/producer/: denmark.py  producer.py
src/service/: cvr_search_service.py
src/utils/: base_client.py  base_model.py  base_router.py  config.py  constants.py  cookie_manager.py  headers.py  logger.py  params_collector.py  queue_manager.py  type_alias.py  utils.py
